# ATES

./: .gitignore  .gitmodules  README.md  compose.yaml  pyproject.toml  sitecustomize.py
config/ates/: default.yaml
config/mmdetection/: fisheye8k.py  fisheye8k_pl_automatic_v1.py  fisheye8k_pl_for_automatic_v1-gen.py  fisheye8k_pl_for_automatic_v2-gen.py  fisheye8k_pl_for_gt.py  fisheye8k_pl_for_manual_v1-gen.py  fisheye8k_pl_for_manual_v2-gen.py  fisheye8k_pl_for_naive_v0-gen.py  fisheye8k_pl_for_naive_v1-gen.py  fisheye8k_pl_for_naive_v2-gen.py  fisheye8k_pl_for_rephrased-gen-eval.py  fisheye8k_pl_for_rephrased-gen.py  fisheye8k_pl_for_train-R.py  fisheye8k_pl_naive_v0.py  fisheye8k_pl_rephrased.py  fisheye8k_pl_rephrased_eval.py  fisheye8k_pl_train_r.py  fisheye8k_train.py
config/simpletuner/: config.env  config.json  lycoris_config.json  multidatabackend.json
config/ultralytics/: fisheye8k.yaml  fisheye8k_with_naive_v0+automatic_v1+automatic_v2.yaml  fisheye8k_with_naive_v0+automatic_v1.yaml  fisheye8k_with_naive_v0+manual_v1+manual_v2.yaml  fisheye8k_with_naive_v0+manual_v1.yaml  fisheye8k_with_naive_v0+naive_v1+naive_v2.yaml  fisheye8k_with_naive_v0+naive_v1.yaml  (+1 more)
docker/: Dockerfile  Dockerfile.mmdetection  Dockerfile.simpletuner  Dockerfile.trl
scripts/: construct_dataset.sh  estimate_optimal_threshold.py  estimate_optimal_threshold.sh  eval_map_wo_tp.py  eval_map_wo_tp.sh  eval_metrics.sh  extract_and_rephrase.sh  extract_caption.py  install_editable.sh  mmdetection_train.sh  obtain_pseudo_label.sh  obtain_tmp_pseudo_label.sh  rephrase_caption.py  run_full_experiment.sh  simpletuner_train.sh  synthesize_from_text.py  synthesize_from_text.sh  trl_train.sh  ultralytics_train.sh
src/ates/: __init__.py  (+4 more)
tools/: construct_dataset.py  convert_coco_to_yolo.py  create_dataset_dict.py  estimate_optimal_threshold.py  eval_metrics.py  extract_caption.py  obtain_pseudo_label.py  rephrase_caption.py  run_experiment.py  synthesize_from_text.py  train_base_detector.py  train_dpo.py  update_experiment_config.py
(+9 files in other folders)
