[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ates"
version = "0.1.0"
description = "Automatic Text-guided Edge-case Synthesis (ATES)"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "PyYAML>=6.0.2",
    "Pillow>=11.0.0",
    "pycocotools>=2.0.10",
    "ultralytics==8.3.155",
    "transformers==4.50.3",
    "accelerate==1.5.2",
    "diffusers==0.34.0",
    "wandb>=0.20.1",
    "flash-attn==2.8.2",
    "datasets==3.5.0",
    "peft==0.17.1",
    "timm==1.0.19",
    "matplotlib>=3.8.0",
    "lycoris-lora>=3.3.0",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
