[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ates"
version = "0.1.0"
description = "Automatic Text-guided Edge-case Synthesis (ATES)"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "PyYAML>=6.0.2",
]

[project.optional-dependencies]
base = [
    "Pillow>=11.0.0",
    "pycocotools>=2.0.10",
    "ultralytics==8.3.155",
    "transformers==4.50.3",
    "accelerate==1.5.2",
    "peft==0.17.1",
    "timm==1.0.19",
]
pseudo = [
    "Pillow>=11.0.0",
    "pycocotools>=2.0.10",
    "ultralytics==8.3.155",
    "timm==1.0.19",
]
dpo = [
    "transformers==4.50.3",
    "accelerate==1.5.2",
    "datasets==3.5.0",
    "peft==0.17.1",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
